--- a/src/app/pages/dashboards/project-dashboard/project-evaluations/project-evaluations.component.html
+++ b/src/app/pages/dashboards/project-dashboard/project-evaluations/project-evaluations.component.html
@@ -19,9 +19,9 @@
                                     <button type="button" style="
                                     width: 200px;margin-right: 10px;" class="btn btn-light waves-effect waves-light" routerLink="/{{project_id}}/project-dashboard"><!--<i class="ri-arrow-right-line label-icon align-middle fs-16"></i> -->Salir</button>
 
-                                    <button type="button" class="btn btn-primary btn-label right waves-effect waves-light" (click)="goDashboard()"><i class="ri-arrow-right-line label-icon align-middle fs-16"></i> Dashboard</button>
+                                    <button type="button" class="btn btn-primary btn-label right waves-effect waves-light" (click)="goDashboard()" *ngIf="!evaluations.auditoria"><i class="ri-arrow-right-line label-icon align-middle fs-16"></i> Dashboard</button>
 
-                                    <button type="button" style="margin-left: 20px;" class="btn btn-primary waves-effect waves-light" (click)="terminar()" *ngIf="!this.evaluations.fechaFinalizacion"><!-- btn-label left <i class="ri-add-line label-icon align-middle fs-16"></i>--> Finalizar Evaluación</button>
+                                    <button type="button" style="margin-left: 20px;" class="btn btn-primary waves-effect waves-light" (click)="terminar()" *ngIf="!this.evaluations.fechaFinalizacion && !evaluations.auditoria"><!-- btn-label left <i class="ri-add-line label-icon align-middle fs-16"></i>--> Finalizar Evaluación</button>
                                 </div>
                             </div>
                     </div>
@@ -123,7 +123,7 @@
                                                                             <span class="badge text-bg-no-evaluado" [ngClass]="{'bg-warning': v.avance > 0 && v.avance < 90,'bg-success': v.avance > 0 && v.avance >= 90, 'text-bg-no-evaluado': v.avance < 1}">{{v.avance > 0 && v.avance < 90 ? 'En evaluación' : (v.avance > 0 && v.avance >= 90 ? 'Evaluado' : 'No evaluado')}}</span>
                                                                         </div>
                                                                         
-                                                                        <div class="col-lg-1 col text-center">
+                                                                        <div class="col-lg-1 col text-center" *ngIf="!evaluations.auditoria">
                                                                             <span [ngClass]="evaluations.active ? 'text-success' : ''"
                                                                             [style.cursor]="'pointer'" (click)="homologar(homoContent, evaluations.id, v.id)">
                                                                             <i class="ri-git-merge-fill"></i>
